[workspace]
members = [".", "example"]
default-members = [".", "example"]

[package]
name = "surena_game"
version = "0.1.0"
edition = "2021"
authors = ["vilaureu"]
publish = false

[dependencies.mirabel_sys]
git = "https://github.com/vilaureu/mirabel_sys"
rev = "75146bbba1e447fae0df6de6d3217dec386d244d"
default-features = false
features = ["surena"]

# Optionally, the release build can be optimized.
[profile.release]
# Unwinding which reaches an FFI boundary falls back to abort anyway.
panic = "abort"
# Perform LTO to achieve better optimization.
lto = "thin"
# Strip symbols from created library to save space.
strip = true
