[workspace]
members = [".", "example"]
default-members = [".", "example"]

[package]
name = "surena_game"
version = "0.1.0"
edition = "2021"
authors = ["vilaureu"]
publish = false

[dependencies.mirabel_sys]
git = "https://github.com/vilaureu/mirabel_sys"
rev = "35ad525d55b6713be2d8633b967158726bbc3d01"
default-features = false
features = ["surena"]

# Optionally, the release build can be optimized.
[profile.release]
# Unwinding which reaches an FFI boundary falls back to abort anyway.
panic = "abort"
# Perform LTO to achieve better optimization.
lto = "thin"
# Strip symbols from created library to save space.
strip = true
