[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["vilaureu"]
publish = false

[dependencies]
# surena_game is simply a dependency.
surena_game = { path = ".." }

[lib]
# This creates a dynamic library which can be loaded into surena.
crate-type = ["cdylib"]

# Profile settings are in the root Cargo.toml.
# Copy them here when using this crate as a template.
